--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
-DB_USER=myuser
+DB_USER=user
 DB_PASSWORD=mysecretpassword
 DB_NAME=mydatabase
 APP_PORT=3000
